--- a/css/styles.css
+++ b/css/styles.css
@@ -30,18 +30,30 @@ bgc футера #2F303A
 body {
   color: var(--primery-text-color);
   background-color: var(--primery-white-color);
+
+  font-family: Roboto, sans-serif;
+  letter-spacing: 0.03em;
 }
 
 a {
   text-decoration: none;
 }
 
-.list {
+button {
+  font-family: inherit;
+}
+
+ul {
   list-style: none;
 }
 
 .logo {
   color: var(--logo-color);
+  font-family: Raleway, sans-serif;
+
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
 }
 .accent-logo {
   color: var(--accent-color);
@@ -51,6 +63,11 @@ a {
 
 .site-nav .link {
   color: var(--title-text-color);
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 .site-nav .link.current {
@@ -66,6 +83,11 @@ a {
 
 .contact-link {
   color: var(--primery-text-color);
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 .contact-link:hover {
@@ -73,17 +95,85 @@ a {
 }
 
 .footer-contact-link {
-  color: rgba(255, 255, 255, 0.6);
+  /* color: rgba(255, 255, 255, 0.6); */
+}
+
+/* hero */
+
+.hero-title {
+  /* color: var(--primery-white-color); */
+
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 }
 
 /* section */
 
 .section-title {
   color: var(--title-text-color);
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
 }
 
-.feature-lest .title {
+/* feature-list */
+
+.feature-list .title {
   color: var(--title-text-color);
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+}
+
+.feature-list .text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+}
+
+/* command list */
+
+.command-list .title {
+  color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.71;
+  text-align: center;
+}
+
+.command-list .text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+}
+
+/* list of projects */
+
+.projects-list .title {
+  color: var(--title-text-color);
+
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.projects-list .text {
+  color: var(--primery-text-color);
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.88;
 }
 
 /* paragraph */
@@ -97,6 +187,10 @@ a {
 .button {
   color: var(--title-text-color);
   background-color: var(--secondary-background-color);
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
 }
 
 .button.primery {
