--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,13 @@
 bgc футера #2F303A
 вторичный цвет фона #F5F4FA
 
+нижняя рамка хедера #ECECEC
+
+рамка карточки портфолио #EEEEEE
+
 шрифт лого Raleway
 осночной шрифт Roboto
+
 */
 
 :root {
@@ -25,7 +30,19 @@ bgc футера #2F303A
   --address-color: rgba(255, 255, 255, 0.6);
   --footer-background-color: #2f303a;
   --footer-contact-link-color: rgba(255, 255, 255, 0.6);
+  --header-border: #ececec;
+  --portfolio-card-border: #eeeeee;
 }
+
+/* html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+} */
 
 body {
   color: var(--primery-text-color);
@@ -34,6 +51,31 @@ body {
   font-family: Roboto, sans-serif;
   letter-spacing: 0.03em;
 }
+
+/* .btn {
+  display: inline-block;
+  padding: 20px 40px;
+  border: 2px;
+  border-radius: 3px;
+  background-color: tomato;
+  color: white;
+  text-decoration: none;
+}
+
+.btn-icon {
+  display: inline-block;
+  height: 20px;
+  width: 20px;
+  margin-right: 6px;
+  background-color: teal;
+  vertical-align: bottom;
+}
+
+.btn:hover,
+.btn:focus {
+  background-color: black;
+  color: #ffffff;
+} */
 
 a {
   text-decoration: none;
@@ -44,13 +86,30 @@ button {
 }
 
 ul {
+  padding: 0;
+  margin: 0;
   list-style: none;
 }
+
+img {
+  display: block;
+}
+
+.container {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+
+  /* outline: 2px solid teal; */
+}
+
+/* header */
 
 .logo {
   color: var(--logo-color);
   font-family: Raleway, sans-serif;
-
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
@@ -59,11 +118,36 @@ ul {
   color: var(--accent-color);
 }
 
+.main-nav {
+  display: flex;
+  align-items: center;
+}
+
+.border {
+  border-bottom: 1px solid var(--header-border);
+}
+
 /* site nav */
 
-.site-nav .link {
-  color: var(--title-text-color);
+.site-nav {
+  display: flex;
+  margin-left: 93px;
+}
 
+/* .site-nav .item:not(:last-child) {
+  margin-right: 50px;
+} */
+
+.site-nav .item + .item {
+  margin-left: 50px;
+}
+
+.site-nav .link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 34px;
+
+  color: var(--title-text-color);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -77,6 +161,17 @@ ul {
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: var(--accent-color);
+}
+
+/* contacts */
+
+.contacts {
+  display: flex;
+  margin-left: auto;
+}
+
+.contacts .item + .item {
+  margin-left: 50px;
 }
 
 /* contact links */
@@ -95,37 +190,78 @@ ul {
 }
 
 .footer-contact-link {
-  /* color: rgba(255, 255, 255, 0.6); */
+  display: inline-block;
+
+  margin-bottom: 10px;
+
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-contact-link:last-child {
+  margin-bottom: 0;
 }
 
 /* hero */
 
+.hero {
+  text-align: center;
+}
+
 .hero-title {
   /* color: var(--primery-white-color); */
+  margin-top: 0;
+  margin-bottom: 30px;
 
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
 
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
 
 /* section */
 
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.section.secondary-bg-color {
+  background-color: var(--secondary-background-color);
+}
+
 .section-title {
+  margin-top: 0;
+  margin-bottom: 50px;
+
   color: var(--title-text-color);
 
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
+}
+
+.section-title.centered {
   text-align: center;
 }
 
 /* feature-list */
 
+.feature-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.feature-list .item {
+  width: 270px;
+}
+
 .feature-list .title {
+  margin-top: 0;
+  margin-bottom: 10px;
+
   color: var(--title-text-color);
 
   font-weight: 700;
@@ -135,15 +271,35 @@ ul {
 }
 
 .feature-list .text {
-  font-weight: 400;
+  margin-top: 0;
+  margin-bottom: 0;
+
   font-size: 14px;
   line-height: 1.71;
 }
 
+/* doing list */
+
+.doing-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
 /* command list */
 
+.command-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
 .command-list .title {
+  margin-top: 30px;
+  margin-bottom: 10px;
+
   color: var(--title-text-color);
+
   font-weight: 500;
   font-size: 16px;
   line-height: 1.71;
@@ -151,17 +307,50 @@ ul {
 }
 
 .command-list .text {
-  font-weight: 400;
+  margin-top: 0;
+  margin-bottom: 30px;
+
   font-size: 16px;
   line-height: 1.18;
   text-align: center;
 }
 
-/* list of projects */
+/* projects-list */
+
+.projects-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.projects-list .item {
+  width: calc((100% - 60) / 3);
+  margin-right: 30px;
+  margin-bottom: 30px;
+
+  /* outline: 2px solid teal; */
+}
+
+.projects-list .item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.projects-list .item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+
+.projects-list .content {
+  padding: 20px 24px;
+
+  border-left: 1px solid var(--portfolio-card-border);
+  border-right: 1px solid var(--portfolio-card-border);
+  border-bottom: 1px solid var(--portfolio-card-border);
+}
 
 .projects-list .title {
-  color: var(--title-text-color);
+  margin-top: 0;
+  margin-bottom: 4px;
 
+  color: var(--title-text-color);
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -169,11 +358,41 @@ ul {
 }
 
 .projects-list .text {
+  margin: 0;
   color: var(--primery-text-color);
 
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.88;
+}
+
+/* footer */
+
+.footer-section {
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  background-color: var(--footer-background-color);
+}
+
+.footer-logo {
+  display: inline-block;
+
+  margin-bottom: 20px;
+
+  color: var(--accent-color);
+}
+
+.accent-footer-logo {
+  color: var(--primery-white-color);
+}
+
+address {
+  margin-bottom: 10px;
+
+  color: var(--primery-white-color);
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.71;
 }
 
 /* paragraph */
@@ -182,9 +401,24 @@ ul {
   color: var(--primery-text-color);
 }
 
+/* btn-list */
+
+.btn-list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.btn-list .item + .item {
+  margin-left: 8px;
+}
+
 /* button */
 
 .button {
+  border-color: transparent;
+  cursor: pointer;
+  border-radius: 4px;
   color: var(--title-text-color);
   background-color: var(--secondary-background-color);
 
@@ -194,8 +428,12 @@ ul {
 }
 
 .button.primery {
+  padding: 10px 32px;
+
   color: var(--primery-white-color);
   background-color: var(--accent-color);
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .button.primery:hover,
@@ -205,6 +443,8 @@ ul {
 }
 
 .button.secondary {
+  padding: 6px 22px;
+
   color: var(--title-text-color);
   background-color: var(--secondary-background-color);
 }
