--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -10,7 +10,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../../images/hero/hero-480.jpg);
+    url(../images/hero/hero-480.jpg);
   background-repeat: no-repeat;
 
   background-position: center;
@@ -29,7 +29,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/hero/hero-480@2x.jpg);
+      url(../images/hero/hero-480@2x.jpg);
   }
 
   // tablet
@@ -40,7 +40,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/hero/hero-768.jpg);
+      url(../images/hero/hero-768.jpg);
 
     @media (min-resolution: 2dppx) {
       background-image: linear-gradient(
@@ -48,7 +48,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../../images/hero/hero-768@2x.jpg);
+        url(../images/hero/hero-768@2x.jpg);
     }
   }
 
@@ -60,7 +60,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/hero/hero-1170.jpg);
+      url(../images/hero/hero-1170.jpg);
 
     @media (min-resolution: 2dppx) {
       background-image: linear-gradient(
@@ -68,7 +68,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../../images/hero/hero-1170@2x.jpg);
+        url(../images/hero/hero-1170@2x.jpg);
     }
   }
 }
