исправляет бургер меню мобильной версии

--- a/css/main.css
+++ b/css/main.css
@@ -345,7 +345,8 @@ button {
 
 @media screen and (max-width: 749px) {
   .menu-container {
-    background-color: var(--primery-white-color);
+    z-index: 1;
+    background-color: var(--secondary-background-color);
     padding: 20px;
     font-size: 20px;
     text-align: center;
